--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
           <li role="presentation"><a href="http://cellear.github.io/class05/">Class 5</a></li>
         </ul>
       </nav>
-      <h3 class="text-muted">Introduction to Web Development</h3>
+      <h3 class="text-muted">MCFCC Child Development Center</h3>
     </div>
 
     <div class="jumbotron">
-      <h1>Cheating with Bootstrap</h1>
+      <h1>MCFCC Child Development Center</h1>
       <p class="lead">
-        The Bootstrap project &mdash; started and supported
-        by Twitter &mdash; makes it (relatively) easy to
-        produce websites that look like this.  You could do worse.
+        Give your child the head start they need to succeed at Milton-Comford Family Childcare. Your child will play, learn, and grow in a engaging and enriching environment!
         </p>
 
     </div>
